--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,21 @@
 
 
 
-  
-
-
 
 
   <nav>
     <ul id="hj">
+      <li><a routerLink="/Treeview">Treeview</a></li>
       <li><a routerLink="/home">Home</a></li>
       <li> <a routerLink="/grid">Transpose Grid</a></li>
-       <li> <a routerLink="/about">Empty Page</a></li>
+       <li> <a routerLink="/test">Test</a></li>
       <li><a routerLink="/contact">working Grid</a></li>
+      <li><a routerLink="/rowwise">Row-wise</a></li>
+      <li><a routerLink="/tree-menu">tree-menu</a></li>
+      <li><a routerLink="/treetest">Treetest</a></li>
+
+      
+      
     </ul>
    </nav>
   
